--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "homepage": "https://github.com/MrOnyancha/Mean-Stack#readme",
   "dependencies": {
     "babel-preset-es2015": "^6.18.0",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "http-status": "^0.2.3",
     "mongodb": "^2.2.15",
-    "mongoose": "^4.7.2"
+    "mongoose": "^4.7.2",
+    "underscore": "^1.8.3",
+    "wagner-core": "^0.2.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
