--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "http-status": "^0.2.3",
     "mongodb": "^2.2.15",
     "mongoose": "^4.7.2",
+    "morgan": "^1.7.0",
+    "path": "^0.12.7",
     "superagent": "^3.3.1",
     "underscore": "^1.8.3",
     "wagner-core": "^0.2.0"
