--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "path": "^0.12.7",
     "superagent": "^3.3.1",
     "underscore": "^1.8.3",
+    "mocha": "^3.2.0",
     "wagner-core": "^0.2.0"
   },
   "devDependencies": {
