--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-session": "^1.11.2",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
     "http-status": "^0.2.3",
     "mongodb": "^2.2.15",
     "mongoose": "^4.7.2",
